--- a/cards/participant/isolated.css
+++ b/cards/participant/isolated.css
@@ -93,6 +93,13 @@ no custom CSS is provided for the card.*/
   border-radius: 100px;
 }
 
+.img-url-placeholder-value {
+  background: url('https://cardstack.github.io/boxel/media-registry/placeholders/profile-4b36b82cc8d2cee21c28a022c9988a75.svg') center/130px 130px no-repeat;
+  width: 100%;
+  height: 100%;
+  border-radius: 100px;
+}
+
 .role-field + .field {
   border-top: 1px solid #dedede;
   padding-top: 35px;
