--- a/cards/participant/embedded.css
+++ b/cards/participant/embedded.css
@@ -1,6 +1,6 @@
 .embedded-card {
   width: 100%;
-  max-width: 450px;
+  max-width: 460px;
   min-height: 90px;
   background-color: #fff;
   color: #000;
@@ -26,6 +26,8 @@
   grid-row: 3;
   grid-column: span 2;
   gap: 0;
+  max-width: 100%;
+  overflow: hidden;
   margin: 25px 0 0;
   padding: 0;
 }
@@ -84,9 +86,20 @@
   word-break: break-word;
 }
 
+.role-placeholder-value {
+  display: none;
+}
+
 .img-url-field img {
   width: 50px;
   height: 50px;
   margin: auto;
+  border-radius: 100px;
+}
+
+.img-url-placeholder-value {
+  background: url('https://cardstack.github.io/boxel/media-registry/placeholders/profile-4b36b82cc8d2cee21c28a022c9988a75.svg') center/cover no-repeat;
+  width: 50px;
+  height: 50px;
   border-radius: 100px;
 }
